test/testdata/variables/self_referential_definition_error.lox
var x = "outer";
{
  var x = x; // error: variable definition cannot refer to itself
}
